--- a/Docs/main.tex
+++ b/Docs/main.tex
@@ -310,16 +310,16 @@ We then fit a more challenging model, $f(x) = 10 - 2 \cdot x + 7.5 \cdot x^{2} -
 
 \noindent \textbf{\small Applications (\texttt{Applications}).} Adiabatic reactor with Mutation++\\
 
-\noindent \textbf{\small Adiabatic reactor.} In this example, we use the python implementation of the physico-chemical library Mutation++\footnote{https://github.com/mutationpp/Mutationpp} to compute the time evolution of the temperature for an air5 $\{\mathrm{N, NO, O, O_{2}, N_{2}}\}$ adiabatic reactor. The results in terms of the Sobol indices evolution with time is shown in Fig.~\ref{fig:ad_react_SA}. In the legend, the chemical mechanism considered for such mixture is shown.
+\noindent \textbf{\small Adiabatic reactor.} In this example, we use the python implementation of the physico-chemical library Mutation++\footnote{\url{https://github.com/mutationpp/Mutationpp}} to compute the time evolution of the temperature for an air5 $\{\mathrm{N, NO, O, O_{2}, N_{2}}\}$ adiabatic reactor. The results in terms of the Sobol indices evolution with time is shown in Fig.~\ref{fig:ad_react_SA}. In the legend, the chemical mechanism considered for such mixture is shown.
 
 \begin{figure}[!htb]
     \centering{
     \includegraphics[width=0.7\textwidth]{./figures/Sobol_10000.png}
-    \caption{Time evolution of the first order and total order Sobol indices for the temperature evolution of an air5 adiabatic reactor.}}
+    \caption{Time evolution of the first order and total order Sobol indices for the variance-based sensitivity of the temperature evolution of an air5 adiabatic reactor at 100 hPa with respect to the pre-exponential factors of the reaction rates of the chemical mechanism.}}
     \label{fig:ad_react_SA}
 \end{figure}
 
-For such example, the reaction rates were sampled from log-uniform distributions with the hyperparameters shown in Table~\ref{tab:react_dist}.
+For such example, the reaction rates were sampled from log-uniform distributions with the hyperparameters shown in Table~\ref{tab:react_dist}. They have been chosen to encompass their current value according to the chemical model of Park, and also with a variability that does not produce instabilities in the solver in Mutation++. The Sobol indices are based on a Monte Carlo estimate with 10,000 samples. This example is just to demonstrate how SoFIA can be coupled to other libraries to produce various results. The implementation has been sped-up by using parallelization via the module \texttt{mpi4py}.
 
 \begin{table}[!hbt]
     \centering
